# TalentAI

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
backend/scripts/: README.md
backend/scripts/services/auth/: start_auth.sh  test_endpoints_auth_service.sh
backend/scripts/services/job/: start_job.sh  test_endpoints_job_service.sh
backend/scripts/services/matching_engine/: start_matching_engine.sh
backend/scripts/services/resume_parser/: start_resume_parser.sh
backend/services/auth_service/: .coveragerc  pytest.ini
backend/services/auth_service/alembic/: env.py
backend/services/auth_service/alembic/versions/: 7a9486138840_initial_users_and_companies.py
backend/services/auth_service/app/: main.py
backend/services/auth_service/app/core/: config.py  deps.py  security.py
backend/services/auth_service/app/db/: base.py  session.py
backend/services/auth_service/app/models/: __init__.py  company.py  user.py
backend/services/auth_service/app/schemas/: __init__.py  company.py  token.py  user.py
backend/services/auth_service/app/services/: __init__.py  auth_service.py  company_service.py
backend/services/auth_service/tests/: conftest.py
backend/services/auth_service/tests/test_endpoints/: test_auth_endpoints.py
backend/services/auth_service/tests/test_security/: test_jwt_tokens.py
backend/services/auth_service/tests/test_services/: test_auth_service.py
backend/services/job_service/: pytest.ini
backend/services/job_service/alembic/: env.py
backend/services/job_service/alembic/versions/: 0169d13429da_remove_fk_constraints_to_external_tables.py  3978ae1aa548_create_job_application_skill_and_.py  da5b3d52c35f_add_embedding_columns_to_jobs_table.py
backend/services/job_service/app/: main.py
backend/services/job_service/app/core/: config.py  deps.py  security.py
backend/services/job_service/app/db/: session.py
backend/services/job_service/app/models/: __init__.py  application.py  category.py  company.py  job.py  skill.py  user.py
backend/services/job_service/app/schemas/: __init__.py  application.py  category.py  job.py  skill.py  token.py
backend/services/job_service/app/services/: __init__.py  application_service.py  auth_service_fix.py  category_service.py  embedding_service.py  job_service.py  skill_service.py
backend/services/job_service/app/utils/: cache.py  search.py
backend/services/job_service/tests/: conftest.py  test_integration_endpoints.py
backend/services/job_service/tests/test_security/: test_jwt_tokens.py
backend/services/job_service/tests/test_services/: test_job_service.py
backend/services/matching_engine_service/alembic/: env.py
backend/services/matching_engine_service/app/: main.py
backend/services/matching_engine_service/scripts/: seed_test_data.py  test_embeddings.py
backend/services/resume_parser_service/: alembic.ini  pytest.ini  worker.py
backend/services/resume_parser_service/alembic/: env.py
backend/services/resume_parser_service/app/: main.py
backend/services/resume_parser_service/tests/: conftest.py  test_websocket.html
backend/shared/: __init__.py
backend/shared/common/: __init__.py  config.py  database.py  decorators.py  exceptions.py  logger.py  logging.py  redis_client.py  utils.py  validators.py
backend/shared/ml_core/: bert_ner.py  embeddings.py  faiss_client.py
backend/shared/ml_core/config/: __init__.py
(+107 files in other folders)
